--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=OWScraper
+application.vendor=Ben
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +27,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/OWScraper.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.json_simple-1.1.jar=G:\\JavaStuff\\Libraries\\json_simple-1.1-all\\lib\\json_simple-1.1.jar
 file.reference.jsoup-1.11.2-javadoc.jar=G:\\JavaStuff\\Libraries\\jsoup-1.11.2-javadoc.jar
@@ -77,4 +79,5 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
+src.resources.dir=resources
 test.src.dir=test
