Outputs to json file in resources YAY! Have pesky ( in URL's of images (think the regex is bad). Starting to think storing all of the stats as string hashmaps is bad... would be nicer to have better data types

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,15 +29,17 @@ dist.jar=${dist.dir}/OWScraper.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.json_simple-1.1.jar=G:\\JavaStuff\\Libraries\\json_simple-1.1-all\\lib\\json_simple-1.1.jar
-file.reference.jsoup-1.11.2-javadoc.jar=G:\\JavaStuff\\Libraries\\jsoup-1.11.2-javadoc.jar
+file.reference.jackson-annotations-2.9.3.jar=G:\\JavaStuff\\Libraries\\jackson-annotations-2.9.3.jar
+file.reference.jackson-core-2.9.3.jar=G:\\JavaStuff\\Libraries\\jackson-core-2.9.3.jar
+file.reference.jackson-databind-2.9.3.jar=G:\\JavaStuff\\Libraries\\jackson-databind-2.9.3.jar
 file.reference.jsoup-1.11.2.jar=G:\\Projects\\jsoup-1.11.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jsoup-1.11.2.jar}:\
-    ${file.reference.jsoup-1.11.2-javadoc.jar}:\
-    ${file.reference.json_simple-1.1.jar}
+    ${file.reference.jackson-databind-2.9.3.jar}:\
+    ${file.reference.jackson-core-2.9.3.jar}:\
+    ${file.reference.jackson-annotations-2.9.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -58,6 +60,8 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.jackson-core-2.9.3.jar=G:\\JavaStuff\\Libraries\\jackson-core-2.9.3-javadoc.jar
+javadoc.reference.jackson-databind-2.9.3.jar=G:\\JavaStuff\\Libraries\\jackson-databind-2.9.3-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
